<?xml version="1.0"?>
<package format="2">
  <name>msgsrv_basics_p</name>
  <version>0.0.0</version>
  <description>The msgsrv_basics_p package</description>

  <maintainer email="mky@todo.todo">mky</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
